# HW5-NW

./: README.md  Untitled.ipynb  main.py  pyproject.toml  requirements.txt  testing_code.ipynb
.github/workflows/: ci.yml
.ipynb_checkpoints/: testing_code-checkpoint.ipynb
align/: align.py
test/: test_align.py
